--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,13 +1,13 @@
 {% extends "core/base.html" %}
 
-{% block title %}Welcome to Our Blog{% endblock %}
+{% block title %}Welcome to Quill Quest{% endblock %}
 
 {% block content %}
 <div class="container py-5">
     <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-            <h1 class="display-4 mb-4">Welcome to Our Blog</h1>
-            <p class="lead mb-4">Discover amazing stories, insights, and perspectives from our community of bloggers.</p>
+            <h1 class="display-4 mb-4">Welcome to Quill Quest</h1>
+            <p class="lead mb-4">A creative space for writers to share their stories, insights, and perspectives.</p>
             
             <div class="row mt-5">
                 <div class="col-md-4">
